--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "author": "CircuitHub <developers@circuithub.com> (circuithub.com)",
   "name": "mail-listener",
   "description": "Mail listener library for node.js. Get notification when new email arrived.",
-  "version": "0.0.2",
+  "keywords": ["mail", "job", "imap", "mail listener", "email", "email parser"],
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "git://github.com/circuithub/mail-listener.git"
