--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "name": "mail-listener",
   "description": "Mail listener library for node.js. Get notification when new email arrived.",
   "keywords": ["mail", "job", "imap", "mail listener", "email", "email parser"],
-  "version": "0.2.0",
+  "version": "0.3.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/circuithub/mail-listener.git"
   },
+  "main": "./index.js",
   "engines": {
-    "node": "~0.6.9"
+    "node": ">=0.8.10"
   },
   "dependencies": {
-    "coffee-script": ">=1.3.3",
+    "coffee-script": ">=1.4.0",
     "imap": ">=0.3.2",
     "mailparser": ">=0.2.27"
   },
