--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "mail-listener",
   "description": "Mail listener library for node.js. Get notification when new email arrived.",
   "keywords": ["mail", "job", "imap", "mail listener", "email", "email parser"],
-  "version": "0.3.0",
+  "version": "0.3.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/circuithub/mail-listener.git"
@@ -13,10 +13,10 @@
     "node": ">=0.8.10"
   },
   "dependencies": {
-    "coffee-script": ">=1.4.0",
     "imap": ">=0.3.2",
     "mailparser": ">=0.2.27"
   },
-  "devDependencies": {},
-  "optionalDependencies": {}
+  "devDependencies": {
+    "coffee-script": ">=1.4.0"
+  }
 }
