--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.8.10"
   },
   "dependencies": {
-    "imap": "=0.7.8",
+    "imap": ">=0.7.8",
     "mailparser": ">=0.3.4"
   },
   "devDependencies": {
